# Personal-projects

./: .gitignore  CONTENTS.txt
Deep learning/: kanawaty_layers.py
Deep learning/.eggs/: setuptools_git_version-1.0.3-py3.8.egg
Deep learning/lstm/: lstm.py
Deep learning/protein_sequence_generation/: DataSet for Assignment.xlsx - Sheet1.csv  README.txt  aa_encoding.py  count_high_fitness_variants.py  generate_protein_sequences.py  models.py
Deep learning/protein_sequence_generation/results/: cv_revised_result.txt  gap_layer.txt  pwm.txt
Deep learning/transformer_chatbot/: chatbot_main.py  chatbot_preprocess_data.py  chatbot_testing.py  drug_design_main.py  embedding.py  main.py  preprocess_data.py  smiles_data_processing.py  testing.py  transformer.py
Inverted pendulum/: flying_ip_theory.m  pendulum1.slx  pendulum1_generate_testcases.py  pendulum1_sfun.mexw32  pendulum1_testcases.xlsx  pendulum_init.m  plant.slx  plant_init.m  plant_sfun.mexw32  quadcopter1.slx  quadcopter1_generate_testcases.py  quadcopter1_sfun.mexw32  quadcopter1_testcases.xlsx  quadcopter2.slx  quadcopter2_generate_testcases.py  quadcopter2_sfun.mexw32  quadcopter2_testcases.xlsx  quadcopter_init.m  solve_rs.m
Inverted pendulum/MATLAB models/: MATLAB_Pend_Model_Simscape.mdl  MATLAB_lin_analysis.mat  MATLAB_pendulum_init.m  MATLAB_pendulum_model.slx  MATLAB_system_model.slx  MATLAB_system_model_w_input.slx
Inverted pendulum/QC_graphs_openloop/: Thumbs.db
Maximum area triangulation/: README.txt  RoboSim3.py  RobotClass2.py
Maximum area triangulation/output1 - probs/: log.txt
Maximum area triangulation/output2 - 8 steps/: Thumbs.db  log.txt
Maximum area triangulation/output3 - 9 steps - buff 1/: Thumbs.db  log.txt
Maximum area triangulation/output4 - 9 steps - buff 0.9/: log.txt
Maximum area triangulation/output5 - 9 steps - buff 0.7/: Thumbs.db  log.txt
Maximum area triangulation/output6 - 9 steps - buff 0.5/: Thumbs.db  log.txt
ROS/motor_controller/: CMakeLists.txt  package.xml
ROS/motor_controller/scripts/: encoder.py  motor.py  motor_controller.py  odom_pub.py  pid.py  twist_pub.py
ROS/motor_controller/scripts/TestAndCalibration/: controller.py  controllerNoInput.py  dutyCycleTable  dutyCycleTableBackward  encoderDutyTable.py  (+1 more)
ROS/motor_controller/src/: motor_controller.py
ROS/vision_system/: CMakeLists.txt  CMakeLists_old.txt  package.xml
ROS/vision_system/src/: CameraInterface.cpp  GenerateLocationsFromImage.cpp  GenerateLocationsFromImage_1.cpp  GenerateLocationsFromImage_2.cpp  GetLocations.cpp
Sumobots/: IR sensor calibration.xlsx  README.txt  main_ino.ino
Sumobots/libraries/Sumobot/: Sumobot.cpp  Sumobot.h
Sumobots/libraries/WfBot/: WfBot.cpp  WfBot.h
TennisBooker/Code/TennisBooker/: .classpath  .project
TennisBooker/batch jar executables/: ashlin_test.bat  log.txt
TennisBooker/batch jar executables/TennisBookerSummer/: monday_TennisBooker.bat
TennisBooker/batch jar executables/TennisBookerWinter/: monday_TennisBooker.bat
The-BEDMAS-Game/app/: app-release.apk  build.gradle
terry_twowheeler/: CMakeLists.txt  README.txt  package.xml
terry_twowheeler/config/: diff_drive_controler.yaml  terry_control.yaml
terry_twowheeler/launch/: gazebo.launch
terry_twowheeler/src/: terry_controller.cpp  terry_velocity_controller.cpp  velodyne_plugin.cc
terry_twowheeler/urdf/: terry_model.xacro  terry_model_3DLidar.xacro
twolinkarm/: README.txt  twolinkarm.slx  twolinkarm_DPI.mat  twolinkarm_DPI1.m  twolinkarm_DPI2.m  twolinkarm_init.m
(+136 files in other folders)
